docs-archive/apache-airflow-providers-keycloak/0.7.3/_sources/_api/airflow/providers/keycloak/auth_manager/constants/index.rst.txt
airflow.providers.keycloak.auth_manager.constants
=================================================

.. py:module:: airflow.providers.keycloak.auth_manager.constants


Attributes
----------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.constants.CONF_SECTION_NAME
   airflow.providers.keycloak.auth_manager.constants.CONF_CLIENT_ID_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_CLIENT_SECRET_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_REALM_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_SERVER_URL_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_REQUESTS_POOL_SIZE_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_REQUESTS_RETRIES_KEY


Module Contents
---------------

.. py:data:: CONF_SECTION_NAME
   :value: 'keycloak_auth_manager'


.. py:data:: CONF_CLIENT_ID_KEY
   :value: 'client_id'


.. py:data:: CONF_CLIENT_SECRET_KEY
   :value: 'client_secret'


.. py:data:: CONF_REALM_KEY
   :value: 'realm'


.. py:data:: CONF_SERVER_URL_KEY
   :value: 'server_url'


.. py:data:: CONF_REQUESTS_POOL_SIZE_KEY
   :value: 'requests_pool_size'


.. py:data:: CONF_REQUESTS_RETRIES_KEY
   :value: 'requests_retries'


