docs-archive/apache-airflow-providers-keycloak/0.10.0/_sources/_api/airflow/providers/keycloak/auth_manager/constants/index.rst.txt
airflow.providers.keycloak.auth_manager.constants
=================================================

.. py:module:: airflow.providers.keycloak.auth_manager.constants


Attributes
----------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.constants.CONF_SECTION_NAME
   airflow.providers.keycloak.auth_manager.constants.CONF_CACHE_TTL_SECONDS_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_CACHE_TIMEOUT_SECONDS_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_CLIENT_ID_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_CLIENT_SECRET_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_REALM_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_SERVER_URL_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_REQUESTS_POOL_SIZE_KEY
   airflow.providers.keycloak.auth_manager.constants.CONF_REQUESTS_RETRIES_KEY
   airflow.providers.keycloak.auth_manager.constants.COOKIE_NAME_ACCESS_TOKEN
   airflow.providers.keycloak.auth_manager.constants.COOKIE_NAME_ID_TOKEN
   airflow.providers.keycloak.auth_manager.constants.COOKIE_NAME_OAUTH_STATE
   airflow.providers.keycloak.auth_manager.constants.COOKIE_NAME_REFRESH_TOKEN


Module Contents
---------------

.. py:data:: CONF_SECTION_NAME
   :value: 'keycloak_auth_manager'


.. py:data:: CONF_CACHE_TTL_SECONDS_KEY
   :value: 'cache_ttl_seconds'


.. py:data:: CONF_CACHE_TIMEOUT_SECONDS_KEY
   :value: 'cache_timeout_seconds'


.. py:data:: CONF_CLIENT_ID_KEY
   :value: 'client_id'


.. py:data:: CONF_CLIENT_SECRET_KEY
   :value: 'client_secret'


.. py:data:: CONF_REALM_KEY
   :value: 'realm'


.. py:data:: CONF_SERVER_URL_KEY
   :value: 'server_url'


.. py:data:: CONF_REQUESTS_POOL_SIZE_KEY
   :value: 'requests_pool_size'


.. py:data:: CONF_REQUESTS_RETRIES_KEY
   :value: 'requests_retries'


.. py:data:: COOKIE_NAME_ACCESS_TOKEN
   :value: '_access_token'


.. py:data:: COOKIE_NAME_ID_TOKEN
   :value: '_id_token'


.. py:data:: COOKIE_NAME_OAUTH_STATE
   :value: '_oauth_state'


.. py:data:: COOKIE_NAME_REFRESH_TOKEN
   :value: '_refresh_token'


